Sycho with Sass

--- a/assets/sass/default/_variables.scss
+++ b/assets/sass/default/_variables.scss
@@ -7,6 +7,7 @@ $bg:#056c5f;
 /*Theme color*/
 $heading_color: #ff3636;
 $primary_color: #f8a683;
+$primary_color_2:#056c5f;
 $link_hover:#f8a683;
 $link_color: #333;
 $border_color: #333;
