--- a/assets/sass/section/_header.scss
+++ b/assets/sass/section/_header.scss
@@ -2,9 +2,13 @@ header{
     .header-area{
         position: absolute;
         left: 0;
+        position: fixed;
         right: 0;
         top: 0;
         padding: 0 105px;
+        background-color: rgba(39, 117, 111,.3);
+        height: 95px;
+        z-index: 700;
         .logo{
             margin-top: 22px;
         }
@@ -24,7 +28,7 @@ header{
                         }
                     }
                    
-                    ::before{
+                    &::before{
                         position: absolute;
                         content: "";
                         height: 0px;
@@ -37,7 +41,7 @@ header{
                         transition: .3s;
                     }
                     &:hover{
-                        ::before{
+                        &::before{
                             height: 28px;
                         }
                     }
@@ -77,15 +81,64 @@ header{
                             font-weight: 600;
                             &:hover{
                                 color: $primary_color;
-                            }
-                            &::before{
-                                display: none;
-                            }
+                            } 
                         }
-                      
+                        ::before{
+                            display: none;
+                        }
                     }
                 }
             }
         }
+        .header-right{
+            display: flex;
+            .header-cta{
+                padding: 34px 0px;
+                i{
+                    color: $primary_color;
+                    font-size: 18px;
+                    
+                }
+                span{
+                    a{
+                        color: $white;
+                        font-size: 18px;
+                        font-weight: 600;
+                    }
+                }
+                }
+                .header-bar{
+                    width: 50px;
+                    height: 50px;
+                    background-color: #fff;
+                    border-radius: 50%;
+                    text-align: center;
+                    line-height: 62px;
+                    padding-top: 14px;
+                    padding-left: 13px;
+                    transition: 0.3s;
+                    margin-top: 20px;
+                    cursor: pointer;
+                    margin-left: 50px;
+                    &:hover{
+                        span{
+                            &:nth-child(2){
+                                width: 24px;
+                            }
+                        }
+                    }
+                    span{
+                        background: $primary_color_2;
+                        height: 2px;
+                        width: 24px;
+                        display: block;
+                        margin: 4px 0;
+                        transition: .3s;
+                        &:nth-child(2){
+                            width: 15px;
+                        }
+                    }
+                 }
+             }
+        }
     }
-}
