--- a/assets/sass/section/_header.scss
+++ b/assets/sass/section/_header.scss
@@ -1,3 +1,4 @@
+/*Header-area Start*/
 header{
     .header-area{
         position: absolute;
@@ -142,3 +143,19 @@ header{
              }
         }
     }
+    /*Header-area end*/
+    /*Slider-area Start*/
+    .slider-area{
+        .single-slider{
+            min-height: 1030px;
+            .slider-content{
+
+            }
+            .slider-img{
+                img{
+                    margin-top: 200px;
+                }
+            }
+        }
+    }
+     /*Slider-area end*/
