Sycho Project with sass

--- a/assets/sass/section/_all.scss
+++ b/assets/sass/section/_all.scss
@@ -2,5 +2,8 @@
 @import "slider";
 @import "button";
 @import "features";
+@import "sectionTitle";
+@import "services";
+@import "about-doctor";
 
 
