--- a/assets/sass/section/_slider.scss
+++ b/assets/sass/section/_slider.scss
@@ -26,6 +26,7 @@
         .slider-img{
            padding-left: 100px;
            overflow: hidden;
+           margin-top: 200px;
             img{
                 margin-left: 10px;
             }
