--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -449,6 +449,7 @@ header .header-area .header-right .header-bar span:nth-child(2) {
 .slider-area .single-slider .slider-img {
   padding-left: 100px;
   overflow: hidden;
+  margin-top: 200px;
 }
 .slider-area .single-slider .slider-img img {
   margin-left: 10px;
@@ -493,6 +494,25 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   color: #fff;
 }
 
+.button-3 {
+  display: inline-block;
+  height: 65px;
+  background: #fff;
+  padding: 0 50px;
+  border-radius: 0 50px 50px 50px;
+  text-align: center;
+  color: #005046;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 65px;
+  transition: 0.3s;
+}
+.button-3:hover {
+  background: #056c5f;
+  color: #fff;
+}
+
 .features-area .features-item {
   background: #fff;
   padding: 30px;
@@ -529,6 +549,138 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   color: gray;
   font-size: 15px;
   font-weight: 500;
+}
+
+.section-title-wrap h2 {
+  font-family: "Playfair Display", serif;
+  font-size: 50px;
+  line-height: 60px;
+  color: #005046;
+  font-weight: 400;
+}
+.section-title-wrap span {
+  text-transform: uppercase;
+  color: gray;
+  font-weight: 500;
+}
+
+.service-area .services-box {
+  position: relative;
+  overflow: hidden;
+}
+.service-area .services-box .services-img {
+  position: relative;
+}
+.service-area .services-box .services-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.3s;
+}
+.service-area .services-box .services-img .services-bottom-title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #056c5f;
+  padding: 20px 30px;
+  transition: 0.3s;
+}
+.service-area .services-box .services-img .services-bottom-title h3 {
+  font-family: "Playfair Display", serif;
+  font-weight: 200;
+  color: #fff;
+  margin: 0;
+}
+.service-area .services-box .services-img .services-bottom-title i {
+  position: absolute;
+  right: 0;
+  background: #f8a683;
+  width: 70px;
+  height: 100%;
+  top: 0;
+  color: #fff;
+  font-size: 23px;
+  font-weight: 100;
+  text-align: center;
+  line-height: 80px;
+}
+.service-area .services-box .services-content {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transform: translateY(-50%);
+  padding: 30px 40px;
+  text-align: center;
+  transition: 0.3s;
+  z-index: 2;
+  opacity: 0;
+  visibility: hidden;
+}
+.service-area .services-box .services-content h3 {
+  font-family: "Playfair Display", serif;
+  font-weight: 600;
+}
+.service-area .services-box .services-content h3 a {
+  color: #fff;
+  font-size: 27px;
+}
+.service-area .services-box .services-content p {
+  color: #fff;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 27px;
+  padding: 20px 20px;
+}
+.service-area .services-box::before {
+  content: "";
+  background: #f8a683;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  opacity: 0;
+  transition: 0.3s;
+}
+.service-area .services-box:hover::before {
+  opacity: 0.9;
+  top: -10px;
+  left: 10px;
+}
+.service-area .services-box:hover .services-content {
+  opacity: 1;
+  visibility: visible;
+}
+.service-area .services-box:hover .services-bottom-title {
+  opacity: 0;
+}
+.service-area .services-box:hover img {
+  transform: scale(1.1);
+}
+
+.about-doctor .Doctor-img img {
+  margin-top: -65px;
+}
+.about-doctor .doctor-content h2 {
+  font-family: "Playfair Display", serif;
+  color: #005046;
+  font-size: 50px;
+  font-weight: 300;
+}
+.about-doctor .doctor-content h5 {
+  font-family: "Playfair Display", serif;
+  font-size: 26px;
+  font-weight: 300;
+  color: #056c5f;
+}
+.about-doctor .doctor-content p {
+  font-size: 17px;
+  color: rgb(132, 139, 138);
+  font-weight: 400;
 }
 
 /*# sourceMappingURL=style.css.map */
