Cycho with sass

--- a/assets/sass/default/_variables.scss
+++ b/assets/sass/default/_variables.scss
@@ -3,6 +3,7 @@ $white:#fff;
 $black:#333;
 $gray:#eee;
 $bg:#056c5f;
+$border:#ddd;
 
 /*Theme color*/
 $heading_color: #ff3636;
@@ -10,6 +11,7 @@ $primary_color: #f8a683;
 $primary_color_2:#056c5f;
 $font-color:#005046;
 $link_hover:#f8a683;
+$form_bg:#f9b89c;
 $link_color: #333;
 $border_color: #333;
 $btn_background: #ff3636;
@@ -19,3 +21,4 @@ $bg-gray:#f6f6f6;
 $count-bg:#0f1113;
 $border-bottom:#f3f3f3;
 $blog:#F2f2f2;
+
