--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -664,6 +664,7 @@ header .header-area .header-right .header-bar span:nth-child(2) {
 
 .about-doctor .Doctor-img img {
   margin-top: -65px;
+  max-width: none;
 }
 .about-doctor .doctor-content h2 {
   font-family: "Playfair Display", serif;
@@ -671,7 +672,7 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   font-size: 50px;
   font-weight: 300;
 }
-.about-doctor .doctor-content h5 {
+.about-doctor .doctor-content h4 {
   font-family: "Playfair Display", serif;
   font-size: 26px;
   font-weight: 300;
@@ -681,6 +682,142 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   font-size: 17px;
   color: rgb(132, 139, 138);
   font-weight: 400;
+  line-height: 30px;
+}
+.about-doctor .button-content img {
+  padding-left: 35px;
+}
+
+.appointment-area .Dr-appointment-box {
+  box-shadow: 0px 10px 30px 0px rgba(0, 49, 43, 0.05);
+}
+.appointment-area .Dr-appointment-box .appointment-box h2 {
+  background: #056c5f;
+  color: #fff;
+  padding: 50px 30px;
+  text-align: center;
+  font-size: 50px;
+  line-height: 1;
+  margin: 0;
+}
+.appointment-area .Dr-appointment-box .appointment-box .appoinment-form {
+  background: #f8a683;
+  padding: 50px 40px;
+}
+.appointment-area .Dr-appointment-box .appointment-box .appoinment-form form input {
+  width: 100%;
+  margin-bottom: 20px;
+  border: 0;
+  height: 70px;
+  color: #fff;
+  background: #f9b89c;
+  padding: 0 20px;
+}
+.appointment-area .Dr-appointment-box .appointment-box .appoinment-form form input:-moz-placeholder {
+  color: #fff;
+  font-size: 14px;
+  opacity: 1;
+}
+.appointment-area .Dr-appointment-box .appointment-box .appoinment-form form input::placeholder {
+  color: #fff;
+  font-size: 14px;
+  opacity: 1;
+}
+.appointment-area .Dr-appointment-box .appointment-box .appoinment-form form textarea {
+  width: 100%;
+  border: 0;
+  padding: 20px;
+  background: #f9b89c;
+}
+.appointment-area .Dr-appointment-box .appointment-box .appoinment-form form textarea:-moz-placeholder {
+  color: #fff;
+  font-size: 14px;
+  opacity: 1;
+}
+.appointment-area .Dr-appointment-box .appointment-box .appoinment-form form textarea::placeholder {
+  color: #fff;
+  font-size: 14px;
+  opacity: 1;
+}
+.appointment-area .Dr-appointment-box .appointment-box .appoinment-form form .submit-btn {
+  background: #056c5f;
+  border: 0;
+  width: 100%;
+  padding: 25px 0;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 14px;
+  transition: 0.3s;
+}
+.appointment-area .Dr-appointment-box .appointment-box .appoinment-form form .submit-btn:hover {
+  background: #005046;
+}
+.appointment-area .Dr-appointment-box .counter-box {
+  padding: 30px;
+}
+.appointment-area .Dr-appointment-box .counter-box .section-title-wrap h2 {
+  font-weight: 500;
+  font-size: 47px;
+  color: #005046;
+}
+.appointment-area .Dr-appointment-box .counter-box .section-title-wrap span {
+  text-transform: uppercase;
+  color: gray;
+  font-weight: 600;
+  padding-left: 13px;
+}
+.appointment-area .Dr-appointment-box .counter-box .counter-list-box {
+  padding: 23px;
+  position: relative;
+}
+.appointment-area .Dr-appointment-box .counter-box .counter-list-box::before {
+  content: "";
+  background: #ddd;
+  width: 85%;
+  height: 2px;
+  position: absolute;
+  left: 0;
+  top: 154px;
+}
+.appointment-area .Dr-appointment-box .counter-box .counter-list-box::after {
+  content: "";
+  background: #ddd;
+  width: 2px;
+  height: 305px;
+  position: absolute;
+  left: 37%;
+  top: 0;
+}
+.appointment-area .Dr-appointment-box .counter-box .counter-list-box .counter-item {
+  width: 50%;
+  float: left;
+  margin-bottom: 90px;
+}
+.appointment-area .Dr-appointment-box .counter-box .counter-list-box .counter-item h2 {
+  font-family: inherit;
+  font-size: 60px;
+  font-weight: 600;
+  margin-bottom: 4px;
+  line-height: 1;
+  padding-bottom: 20px;
+}
+.appointment-area .Dr-appointment-box .counter-box .counter-list-box .counter-item:nth-child(1) {
+  color: #f8a683;
+}
+.appointment-area .Dr-appointment-box .counter-box .counter-list-box .counter-item:nth-child(2) {
+  color: #005046;
+}
+.appointment-area .Dr-appointment-box .counter-box .counter-list-box .counter-item:nth-child(3) {
+  color: #005046;
+}
+.appointment-area .Dr-appointment-box .counter-box .counter-list-box .counter-item:nth-child(4) {
+  color: #f8a683;
+}
+.appointment-area .Dr-appointment-box .counter-box .counter-list-box .counter-item span {
+  font-size: 27px;
+  color: #848b8a;
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=style.css.map */
