--- a/assets/sass/section/_contact.scss
+++ b/assets/sass/section/_contact.scss
@@ -1,11 +1,65 @@
 .contact-area{
     .contact-form{
-        form{
+        .section-title{
+            color: $white;
+        }
             input{
                 height: 70px;
                 width: 100%;
-                color: tomato;
+                border: 0;
+                padding: 0 15px;
+                background: #458e85;
+                color: $white;
+                &::placeholder{
+                    color:$white;
+                    font-size: 14px;
+                    opacity: 1;
+                }
             }
+            .contact-select{
+                display: flex;
+                i{
+                    position: absolute;
+                    top: 30px;
+                    right: 20px;
+                    color: $white;
+                }
+                position: relative;
+                select{
+                    width: 100%;
+                    height: 70px;
+                    border: 0;
+                    padding:0 20px;
+                    background: #458e85;
+                    appearance: none;
+                    font-size: 14px;
+                    color: $white;
+                    background: #458e85;
+                }
+            }
+            textarea{
+                width: 100%;
+                background: #458e85;
+                border: 0;
+                padding: 20px;
+                height: 170px;
+                color: $white;
+                margin-bottom: 20px;
+                resize: none;
+                &::placeholder{
+                    color: $white;
+                    font-size: 14px;
+                    opacity: 1;
+                }
+            }
+    }
+    .our-map{
+        iframe{
+            padding-left: 100px;
+            height: 980px;
+            width: 100%;
+            border: 0;
+            transform: translateY(-60px);
         }
     }
 }
