--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -513,6 +513,26 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   color: #fff;
 }
 
+.contact-button {
+  display: inline-block;
+  height: 65px;
+  background: #f8a683;
+  padding: 0 50px;
+  border-radius: 0 50px 50px 50px;
+  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 65px;
+  transition: 0.3s;
+  border: none;
+}
+.contact-button:hover {
+  background: #fff;
+  color: #056c5f;
+}
+
 .features-area .features-item {
   background: #fff;
   padding: 30px;
@@ -832,10 +852,64 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   transform: scale(1.1);
 }
 
-.contact-area .contact-form form input {
+.contact-area .contact-form .section-title {
+  color: #fff;
+}
+.contact-area .contact-form input {
   height: 70px;
   width: 100%;
-  color: tomato;
+  border: 0;
+  padding: 0 15px;
+  background: #458e85;
+  color: #fff;
+}
+.contact-area .contact-form input::placeholder {
+  color: #fff;
+  font-size: 14px;
+  opacity: 1;
+}
+.contact-area .contact-form .contact-select {
+  display: flex;
+  position: relative;
+}
+.contact-area .contact-form .contact-select i {
+  position: absolute;
+  top: 30px;
+  right: 20px;
+  color: #fff;
+}
+.contact-area .contact-form .contact-select select {
+  width: 100%;
+  height: 70px;
+  border: 0;
+  padding: 0 20px;
+  background: #458e85;
+  appearance: none;
+  font-size: 14px;
+  color: #fff;
+  background: #458e85;
+}
+.contact-area .contact-form textarea {
+  width: 100%;
+  background: #458e85;
+  border: 0;
+  padding: 20px;
+  height: 170px;
+  color: #fff;
+  margin-bottom: 20px;
+  resize: none;
+}
+.contact-area .contact-form textarea::placeholder {
+  color: #fff;
+  font-size: 14px;
+  opacity: 1;
+}
+.contact-area .our-map iframe {
+  padding-left: 100px;
+  height: 980px;
+  width: 100%;
+  border: 0;
+  transform: translateY(-60px);
 }
 
 /*# sourceMappingURL=style.css.map */
