--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -912,4 +912,30 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   transform: translateY(-60px);
 }
 
+.brand-area {
+  background: #151616;
+}
+.brand-area .brand-text {
+  background-color: #056c5f;
+  padding: 40px 50px;
+  border-radius: 10px;
+}
+.brand-area .brand-text h3 {
+  font-family: "Playfair Display", serif;
+  color: #fff;
+  font-size: 50px;
+  line-height: 60px;
+  font-weight: 300;
+  margin-bottom: 0;
+  display: inline-block;
+}
+.brand-area .brand-active {
+  padding: 35px;
+  border-radius: 0 10px 10px 0;
+}
+.brand-area .brand-active .brand-item {
+  display: inline-block;
+  padding-right: 100px;
+}
+
 /*# sourceMappingURL=style.css.map */
