Sycho with Sass

--- a/assets/sass/default/_variables.scss
+++ b/assets/sass/default/_variables.scss
@@ -10,6 +10,7 @@ $black-bg:#151616;
 $heading_color: #ff3636;
 $primary_color: #f8a683;
 $primary_color_2:#056c5f;
+$meta_color:#fbf7f3;;
 $font-color:#005046;
 $link_hover:#f8a683;
 $form_bg:#f9b89c;
