--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -1031,5 +1031,52 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   display: inline-block;
   padding-right: 100px;
 }
+.brand-area .footer_widget .logo a img {
+  padding-bottom: 20px;
+}
+.brand-area .footer_widget .footer_area p {
+  color: #848b8a;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 27px;
+}
+.brand-area .footer_widget .social h4 {
+  color: #fff;
+  font-family: "Playfair Display", serif;
+  padding-bottom: 10px;
+}
+.brand-area .footer_widget .social ul {
+  display: flex;
+  padding: 0;
+}
+.brand-area .footer_widget .social ul li a {
+  display: block;
+  text-align: center;
+  font-size: 14px;
+  background-color: #313232;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-right: 10px;
+  border-radius: 50%;
+  transition: 0.3s;
+}
+.brand-area .footer_widget .social ul li a:hover {
+  color: #fff;
+  background-color: #f8a683;
+}
+.brand-area .footer_widget .social ul li a i {
+  margin: 0;
+}
+.brand-area .footer-service .footer-title h4 {
+  color: #fff;
+  font-family: "Playfair Display", serif;
+  padding-bottom: 10px;
+}
+.brand-area .footer-service .footer-list ul li a {
+  color: #fff;
+  font-size: 16px;
+}
 
 /*# sourceMappingURL=style.css.map */
