--- a/assets/sass/section/_brand.scss
+++ b/assets/sass/section/_brand.scss
@@ -83,10 +83,16 @@
             }
             .footer-list{
                 ul{
+                    padding: 0;
                     li{
                         a{
+                            position: relative;
                             color: $white;
-                            font-size: 16px;
+                            font-size: 16px;color: $footer_font;
+                            line-height: 27px;
+                            font-size: 17px;
+                            font-weight: 500;
+                            padding-left: 10px;
                         }
                     }
                 }
