--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -1074,9 +1074,18 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   font-family: "Playfair Display", serif;
   padding-bottom: 10px;
 }
+.brand-area .footer-service .footer-list ul {
+  padding: 0;
+}
 .brand-area .footer-service .footer-list ul li a {
+  position: relative;
   color: #fff;
   font-size: 16px;
+  color: #848b8a;
+  line-height: 27px;
+  font-size: 17px;
+  font-weight: 500;
+  padding-left: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
