--- a/assets/sass/section/_brand.scss
+++ b/assets/sass/section/_brand.scss
@@ -79,6 +79,7 @@
                     color: $white;
                     font-family: "Playfair Display", serif;
                     padding-bottom: 10px;
+                    font-size: 25px;
                 }
             }
             .footer-list{
@@ -93,6 +94,19 @@
                             font-size: 17px;
                             font-weight: 500;
                             padding-left: 10px;
+                            &::before{
+                                position: absolute;
+                                content: "";
+                                height: 2px;
+                                width: 5px;
+                                left: 0;
+                                top: 50%;
+                                background: $footer_font;
+                                &:hover a{
+                                    width: 5px;
+                                    padding-left: 20px;
+                                }
+                            }
                         }
                     }
                 }
