--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -1089,17 +1089,18 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   padding-left: 10px;
   transition: 0.4s;
 }
+.brand-area .footer-service .footer-list ul li a:hover::before {
+  width: 10px;
+}
 .brand-area .footer-service .footer-list ul li a::before {
   position: absolute;
   content: "";
+  transition: 0.3s;
   height: 2px;
   width: 5px;
   left: 0;
   top: 50%;
   background: #848b8a;
-}
-.brand-area .footer-service .footer-list ul li a::before:hover {
-  width: 10px;
 }
 .brand-area .footer-service .footer-list ul li a:hover {
   color: #fff;
