--- a/assets/sass/section/_brand.scss
+++ b/assets/sass/section/_brand.scss
@@ -117,4 +117,14 @@
                 }
             }
         }
+        .footer-contact{
+            .contact-title{
+                h4{
+                    color: $white;
+                    font-family: "Playfair Display", serif;
+                    padding-bottom: 10px;
+                    font-size: 25px;
+                }
+            }
+        }
 }
