--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -1112,5 +1112,43 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   padding-bottom: 10px;
   font-size: 25px;
 }
+.brand-area .footer-contact .footer-area p {
+  font-size: 16px;
+  color: #848b8a;
+  line-height: 27px;
+  font-size: 17px;
+  font-weight: 500;
+}
+.brand-area .footer-contact .email h5 {
+  color: #f8a683;
+  font-size: 18px;
+}
+.brand-area .footer-contact .email p {
+  color: #848b8a;
+}
+.brand-area .footer-contact .number h5 {
+  color: #f8a683;
+  font-size: 18px;
+}
+.brand-area .footer-contact .number p {
+  color: #848b8a;
+}
+.brand-area .footer-contact .website h5 {
+  color: #f8a683;
+  font-size: 18px;
+}
+.brand-area .footer-contact .website p {
+  color: #848b8a;
+}
+.brand-area .footer-form .footer-title h4 {
+  color: #fff;
+  font-family: "Playfair Display", serif;
+  padding-bottom: 10px;
+  font-size: 25px;
+}
+.brand-area .footer-form .footer-title p {
+  color: #848b8a;
+  font-weight: 500;
+}
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=Style.css.map */
