--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -488,6 +488,7 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   font-size: 13px;
   line-height: 65px;
   transition: 0.3s;
+  border: none;
 }
 .button-2:hover {
   background: #f8a683;
@@ -531,6 +532,20 @@ header .header-area .header-right .header-bar span:nth-child(2) {
 .contact-button:hover {
   background: #fff;
   color: #056c5f;
+}
+
+.email-button {
+  height: 70px;
+  width: 100%;
+  line-height: 70px;
+  padding: 0 25px;
+  font-size: 15px;
+  color: #056c5f;
+  border: none;
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  background-color: #ffffff;
+  margin-bottom: 16px;
 }
 
 .features-area .features-item {
