Sycho with Sass

--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -1098,7 +1098,7 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   color: #fff;
   font-size: 16px;
   color: #848b8a;
-  line-height: 27px;
+  line-height: 36px;
   font-size: 17px;
   font-weight: 500;
   padding-left: 10px;
@@ -1166,4 +1166,4 @@ header .header-area .header-right .header-bar span:nth-child(2) {
   font-weight: 500;
 }
 
-/*# sourceMappingURL=Style.css.map */
+/*# sourceMappingURL=style.css.map */
