--- a/assets/sass/section/_portfolio.scss
+++ b/assets/sass/section/_portfolio.scss
@@ -3,9 +3,10 @@
         overflow: hidden;
         padding: 0;
         img{
-          
           transition: .3s;
-          max-width: 100%;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
           &:hover{
             transform: scale(1.1);
           }
